--- a/v3/index.css
+++ b/v3/index.css
@@ -1,5 +1,7 @@
 body {
   display: flex;
+  flex-direction: column;
+  gap: 15px;
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -44,6 +46,22 @@ body {
 
 .previous-expression {
   color: #666;
+}
+
+a.v {
+  color: #666;
+  text-decoration: none;
+  padding: 5px;
+  border-radius: 5px;
+  transition: color 0.3s;
+  background-color: #f5f5f5;
+  border: 1px solid #ddd;
+  cursor: pointer;
+
+  &:hover {
+    color: #e67e22;
+    background-color: #fff;
+  }
 }
 
 .current-input {
